--- a/shitty-page/index.html
+++ b/shitty-page/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <--! this is awful -->
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -57,4 +57,5 @@
   </form>
   </article>
 </body>
+
 </html>
